feat: update / delete category added
